disable section scrollbars in About/Work/Contact, fix automatic section scroll reset in About and add to Work/Contact sections, move spiral svg in About to AboutSpiral.tsx

--- a/components/Contact.module.css
+++ b/components/Contact.module.css
@@ -1,3 +1,12 @@
 .titleHighlight {
 	-webkit-text-fill-color: rgba(255, 255, 255, 0.3);
 }
+
+.contactContentBody::-webkit-scrollbar {
+	display: none;
+}
+
+.contactContentBody {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
